# ring

./: .bazelrc  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  0001-Allow-static-detection-of-NEON-on-non-Android-ARMv7-.patch  API-CONVENTIONS.md  BUGS  BUILD.bazel  BUILDING  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  FUZZING.md  INCORPORATING.md  LICENSE  LICENSE-other-bits  MODULE.bazel  Makefile  PORTING.md  README.md  RELEASES.md  SECURITY.md  SIDE-CHANNELS.md  STYLE  STYLE.md  agystj0e.env.txt  appveyor.yml  build.json  build.rs  build_settings.rs  codecov.yml  deny.toml  go.mod  go.sum  ring.sln  rustfmt.toml  (+2 more)
bench/: Cargo.toml  aead.rs  agreement.rs  digest.rs  ecdsa.rs  rsa.rs  sm.rs  x25519.rs
bench/data/: rsa-2048-3-public-key.der  rsa-2048-65537-public-key.der  rsa-3072-3-public-key.der  rsa-4096-3-public-key.der  rsa-8192-3-public-key.der  rsa-generate.sh
cavp/: Cargo.toml
cavp/tests/: shavs.rs
crypto/: CMakeLists.txt  abi_self_test.cc  arm_arch.h  base.h  bcm_support.h  block.c  block.h  compiler_test.cc  constant_time.c  constant_time_test.Windows.vcxproj  constant_time_test.c  constant_time_test.cc  cpu-aarch64-linux.c  cpu-aarch64.c  cpu-arm-asm.S  cpu-arm-linux.c  cpu-arm-linux_test.cc  cpu-arm.c  cpu-intel.c  cpu-ppc.c  cpu-s390x.c  cpu-x86-asm.pl  cpu-x86_64-asm.pl  cpu.c  cpu_aarch64_apple.c  cpu_aarch64_freebsd.c  cpu_aarch64_fuchsia.c  cpu_aarch64_sysreg.c  cpu_arm.c  cpu_arm_freebsd.c  cpu_arm_linux.c  cpu_arm_linux.cc  cpu_arm_linux_test.cc  cpu_arm_openbsd.c  cpu_intel.c  cpu_intel.cc  crypto.c  crypto.cc  crypto_error.c  crypto_error.h  (+37 more)
crypto/aes/: CMakeLists.txt  aes.c  aes_test.Windows.vcxproj  aes_test.cc  internal.h  key_wrap.c  mode_wrappers.c
crypto/asn1/: CMakeLists.txt  a_bitstr.c  a_bitstr.cc  a_bool.c  a_bytes.c  a_d2i_fp.c  a_d2i_fp.cc  a_dup.c  a_dup.cc  a_enum.c  a_gentm.c  a_gentm.cc  a_i2d_fp.c  a_i2d_fp.cc  a_int.c  a_int.cc  a_mbstr.c  a_mbstr.cc  a_object.c  a_object.cc  a_print.c  a_strex.c  a_strnid.c  a_strnid.cc  a_time.c  a_time.cc  a_type.c  a_type.cc  a_utctm.c  a_utctm.cc  a_utf8.c  asn1.h  asn1_error.c  asn1_lib.c  asn1_lib.cc  asn1_locl.h  asn1_mac.h  asn1_par.c  asn1_test.cc  asn_pack.c  (+27 more)
crypto/base64/: CMakeLists.txt  base64.c  base64.cc  base64.h  base64_test.c  base64_test.cc
crypto/bio/: CMakeLists.txt  bio.c  bio.cc  bio.h  bio_error.c  bio_mem.c  bio_mem.cc  bio_test.c  bio_test.cc  buffer.c  connect.c  connect.cc  fd.c  fd.cc  file.c  file.cc  hexdump.c  hexdump.cc  internal.h  pair.c  pair.cc  printf.c  printf.cc  socket.c  socket_helper.c
crypto/blake2/: blake2.cc  blake2_test.cc  blake2b256_tests.txt
crypto/bn/: CMakeLists.txt  add.c  bn.c  bn.h  bn_asn1.c  bn_error.c  bn_test.Windows.vcxproj  bn_test.c  bn_test.cc  bn_test_lib.c  bn_test_lib.h  bn_tests.txt  check_bn_tests.go  cmp.c  convert.c  ctx.c  div.c  exponentiation.c  gcd.c  mul.c  (+11 more)
fipsoracle/: CMakeLists.txt  cavp_aes_gcm_test.cc  cavp_aes_test.cc  cavp_ctr_drbg_test.cc  cavp_ecdsa2_keypair_test.cc  cavp_ecdsa2_pkv_test.cc  cavp_ecdsa2_siggen_test.cc  cavp_ecdsa2_sigver_test.cc  cavp_hmac_test.cc  cavp_keywrap_test.cc  cavp_rsa2_keygen_test.cc  cavp_rsa2_siggen_test.cc  cavp_rsa2_sigver_test.cc  cavp_sha_monte_test.cc  cavp_sha_test.cc  cavp_tdes_test.cc  cavp_test_util.cc  cavp_test_util.h  run_cavp.go
fuzz/: CMakeLists.txt  Cargo.toml  arm_cpuinfo.cc  bn_div.cc  bn_mod_exp.cc  cert.cc  cert.options  client.cc  client.options  conf.cc  crl_getcrlstatusforcert_fuzzer.cc  crl_parse_crl_certificatelist_fuzzer.cc  crl_parse_crl_tbscertlist_fuzzer.cc  crl_parse_issuing_distribution_point_fuzzer.cc  decode_client_hello_inner.cc  der_roundtrip.cc  dtls_client.cc  dtls_server.cc  minimise_corpora.sh  minimise_corpuses.sh  ocsp_parse_ocsp_cert_id_fuzzer.cc  ocsp_parse_ocsp_response_data_fuzzer.cc  ocsp_parse_ocsp_response_fuzzer.cc  ocsp_parse_ocsp_single_response_fuzzer.cc  parse_authority_key_identifier_fuzzer.cc  parse_certificate_fuzzer.cc  parse_crldp_fuzzer.cc  pkcs12.cc  pkcs8.cc  privkey.cc  read_pem.cc  refresh_ssl_corpora.sh  server.cc  session.cc  spki.cc  ssl_ctx_api.cc  verify_name_match_fuzzer.cc  verify_name_match_normalizename_fuzzer.cc  verify_name_match_verifynameinsubtree_fuzzer.cc
pki/: CMakeLists.txt  IMPORT  asn1_util.cc  cert_error_id.h  cert_error_params.cc  cert_error_params.h  cert_errors.cc  cert_errors.h  cert_issuer_source.h  cert_issuer_source_static.cc  cert_issuer_source_static.h  cert_issuer_source_static_unittest.cc  cert_issuer_source_sync_unittest.h  cert_net_fetcher.h  certificate_policies.cc  certificate_policies.h  certificate_policies_unittest.cc  certificate_unittest.cc  common_cert_errors.h  crl.cc  crl.h  crl_getcrlstatusforcert_fuzzer.cc  crl_parse_crl_certificatelist_fuzzer.cc  crl_parse_crl_tbscertlist_fuzzer.cc  crl_parse_issuing_distribution_point_fuzzer.cc  crl_unittest.cc  encode_values.cc  encode_values.h  encode_values_unittest.cc  extended_key_usage.cc  extended_key_usage.h  extended_key_usage_unittest.cc  general_names.cc  general_names.h  general_names_unittest.cc  import_spec.json  input.cc  input.h  input_unittest.cc  ip_util.h  (+82 more)
pregenerate_asm/: Cargo.toml
rust/: CMakeLists.txt  README.md
ssl/: CMakeLists.txt  custom_extensions.c  custom_extensions.cc  d1_both.c  d1_both.cc  d1_clnt.c  d1_enc.c  d1_lib.c  d1_lib.cc  d1_meth.c  d1_pkt.c  d1_pkt.cc  d1_srtp.c  d1_srtp.cc  d1_srvr.c  dtls1.h  dtls_method.c  dtls_method.cc  dtls_record.c  dtls_record.cc  encrypted_client_hello.cc  extensions.cc  handoff.cc  handshake.cc  handshake_client.c  handshake_client.cc  handshake_server.c  handshake_server.cc  heartbeat_test.c  internal.h  s23_clnt.c  s23_lib.c  s23_meth.c  s23_pkt.c  s23_srvr.c  s3_both.c  s3_both.cc  s3_cbc.c  s3_clnt.c  s3_enc.c  (+69 more)
test/: Cargo.toml
tool/: CMakeLists.txt  args.cc  ciphers.cc  client.cc  const.cc  digest.cc  generate_ech.cc  generate_ed25519.cc  generate_tests.cc  genrsa.cc  internal.h  pkcs12.cc  rand.cc  server.cc  sign.cc  speed.cc  tool.Windows.vcxproj  tool.cc  transport_common.cc  transport_common.h
(+2247 files in other folders)
