[package]
authors = ["Brian Smith <brian@briansmith.org>"]
build = "build.rs"
description = "A Rust interface for a simplification of BoringSSL's libcrypto."
license-file = "LICENSE"
name = "ring"
readme = "README.md"
repository = "https://github.com/briansmith/ring"
version = "0.2.0"

[lib]
name = "ring"

[dependencies]
untrusted = "0.3"

[target.'cfg(unix)'.dependencies]
lazy_static = "0.2.1"

[features]
# These features are documented in the top-level module's documentation.
default = ["use_heap", "dev_urandom_fallback"]
dev_urandom_fallback = []
internal_benches = []
rsa_signing = []
slow_tests = []
test_logging = []
use_heap = []

# XXX: debug = false because of https://github.com/rust-lang/rust/issues/34122

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
